mobile responsive bug squash

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ body{
         margin:10px 10px;
     }
     #logoImg{
-        height:66px;
+        height:58px;
     }
     #componentDisplay{
         height:100vh;
